# file_sync_app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
Machines/machine1/: file1.txt  file2  file3  file4
Machines/machine2/: file2
settings/: machine_settings.json  machines_default_settings.json
src/: Command.hpp  ExitApp.cpp  ExitApp.hpp  FileInfo.cpp  FileInfo.hpp  Machine.cpp  Machine.hpp  MachinesSync.cpp  MachinesSync.hpp  Menu.cpp  Menu.hpp  SettingApp.cpp  SettingApp.hpp  Stats.cpp  Stats.hpp  Synchronizer.cpp  Synchronizer.hpp  Time.cpp  Time.hpp  fileInfo.cpp  fileInfo.hpp  machine.cpp  machine.hpp  machinesSync.cpp  machinesSync.hpp  synchronizer.cpp  synchronizer.hpp  time.cpp  time.hpp
ut/: FileInfoTests.cpp  MachineTests.cpp  MachinesSyncTests.cpp  StatsTests.cpp  SynchronizerTests.cpp
ut/MachinesTest/machine1_test/: file2
ut/MachinesTest/machine3_test/: file1
